Sat Oct 13 02:57:22 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/parser.t: Forward port tests of StringValueRangeProcessor
	  with a prefix or suffix from 1.2's XS Search::Xapian.  (ticket#607)

Tue Aug 28 04:33:21 GMT 2012  Dan Colish <dcolish@gmail.com>

	* java/SmokeTest.java,java/java.i: Implement and test MSetIterator,
	  ESetIterator. Fix PostingIterator, ValueIterator, and TermIterator.

Sun Aug 12 05:45:32 GMT 2012  Dan Colish <dcolish@gmail.com>

	* java/Makefile.am,java/run-java-test: Remove jdb target from
	  Makefile. 

Sun Aug 12 04:54:04 GMT 2012  Dan Colish <dcolish@gmail.com>

	* java/Makefile.am,java/SmokeTest.java,java/java.i: Add a typemap for
	  TermIterator pairs to String[] for the Enquire.getMatchingTerms
	  API. Use debug symbols when configured with MAINTAINER_MODE.

Sun Aug 12 04:46:59 GMT 2012  Dan Colish <dcolish@gmail.com>

	* java/Makefile.am,java/SmokeTest.java,java/java.i: Add typemap for
	  TermIterator pairs to String[] to conform with the
	  Enquire::getMatchingterms binding API. Build bindings with
	  debugging symbols.

Tue Jul 24 09:06:14 GMT 2012  Olly Betts <olly@survex.com>

	* lua/util.i: Fix functor wrappers which return strings to be zero-byte
	  clean.

Tue Jul 24 06:06:24 GMT 2012  Olly Betts <olly@survex.com>

	* lua/util.i: Fix wrapping of FieldProcessor.
	* lua/smoketest.lua: Add test coverage for wrapping of FieldProcessor.

Tue Jul 24 04:11:50 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: Fix XapianFieldProcessor testcase.

Tue Jul 24 03:45:15 GMT 2012  Olly Betts <olly@survex.com>

	* csharp/Makefile.am,java/Makefile.am,lua/util.i,perl/util.i.in,
	  python/extra.i,python/generate-python-exceptions,xapian-headers.i:
	  Wrap FieldProcessor.
	* php/smoketest.php: Add simple test of subclassing
	  XapianFieldProcessor.

Sat Jul 21 13:18:48 GMT 2012  Olly Betts <olly@survex.com>

	* lua/docs/examples/simpleexpand.lua,
	  lua/docs/examples/simplematchdecider.lua,